foundation-objs/main/default/objects/Asset/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>