foundation-objs/main/default/objects/Asset/fields/BitrixData__c.field-meta.xml
<CustomField>
    <fullName>BitrixData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BitrixData</label>
    <type>Checkbox</type>
</CustomField>