foundation-objs/main/default/objects/Asset/fields/business_questionnarie_completed__c.field-meta.xml
<CustomField>
    <fullName>business_questionnarie_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select is the business questionnaire is completed</description>
    <label>Business questionnaire completed</label>
    <type>Checkbox</type>
</CustomField>