foundation-objs/main/default/objects/Asset/fields/Category_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Company__c</fullName>
    <label>Category of Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Listed</fullName>
            </value>
            <value>
                <fullName>MNC</fullName>
            </value>
            <value>
                <fullName>Big Brand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>