foundation-objs/main/default/objects/Asset/fields/Category_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Category_Risk_Comment__c</fullName>
    <label>Category Risk Comment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASP Usage</fullName>
            </value>
            <value>
                <fullName>E-Invoice &amp; EWB Usage</fullName>
            </value>
            <value>
                <fullName>EINV Usage</fullName>
            </value>
            <value>
                <fullName>EWB Usage</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>