foundation-objs/main/default/objects/Asset/fields/Category_Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Category_Risk_Status__c</fullName>
    <label>Category Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>High Risk</fullName>
                <isActive>false</isActive>
                <label>High Risk</label>
            </value>
            <value>
                <fullName>Low Risk</fullName>
                <isActive>false</isActive>
                <label>Low Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>