foundation-objs/main/default/objects/Asset/fields/Child_Asset__c.field-meta.xml
<CustomField>
    <fullName>Child_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Asset</label>
    <type>Checkbox</type>
</CustomField>