foundation-objs/main/default/objects/Asset/fields/Churn_Ageing_Since_Asset_Created__c.field-meta.xml
<CustomField>
    <fullName>Churn_Ageing_Since_Asset_Created__c</fullName>
    <formula>Churn_Date__c -  datevalue(CreatedDate)</formula>
    <label>Churn Ageing (Since Asset Created)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>