foundation-objs/main/default/objects/Asset/fields/Churn_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Churn_Attribution__c</fullName>
    <label>Churn Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KAM</fullName>
                <default>true</default>
                <label>KAM</label>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>