foundation-objs/main/default/objects/Asset/fields/Churn_flag__c.field-meta.xml
<CustomField>
    <fullName>Churn_flag__c</fullName>
    <formula>IF(AND(isblank(CSM_KAM_handover__c),ispickval(Status,&apos;Churn&apos;)),1,0)</formula>
    <label>Churn flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>