foundation-objs/main/default/objects/Asset/fields/Churn_Level_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Level_2_Reason__c</fullName>
    <label>Churn Level 2 Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration delays/issues</fullName>
            </value>
            <value>
                <fullName>Moved to Tally Prime free offering</fullName>
            </value>
            <value>
                <fullName>Company restructuring</fullName>
            </value>
            <value>
                <fullName>Moved to Govt portal</fullName>
            </value>
            <value>
                <fullName>Competitive pricing</fullName>
            </value>
            <value>
                <fullName>Reconciliation product issue</fullName>
            </value>
            <value>
                <fullName>Data ingestion problems</fullName>
            </value>
            <value>
                <fullName>Support Issues</fullName>
            </value>
            <value>
                <fullName>Auto-population of GSTR1 and 3B</fullName>
            </value>
            <value>
                <fullName>Onboarding issues</fullName>
            </value>
            <value>
                <fullName>Need new Product features</fullName>
            </value>
            <value>
                <fullName>Product bugs</fullName>
            </value>
            <value>
                <fullName>Weak Customer Relation</fullName>
            </value>
            <value>
                <fullName>SF Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>