foundation-objs/main/default/objects/Asset/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <label>Churn / Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Usage</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product Features /Bugs</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
            <value>
                <fullName>Company Restructuring</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Renewal Churn</fullName>
            </value>
            <value>
                <fullName>Integration Issue</fullName>
            </value>
            <value>
                <fullName>Onboarding Issue</fullName>
            </value>
            <value>
                <fullName>Sales return</fullName>
                <isActive>false</isActive>
                <label>Sales return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>