foundation-objs/main/default/objects/Asset/fields/Client_Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Client_Interaction_Summary__c</fullName>
    <label>Client Interaction Summary</label>
    <type>TextArea</type>
</CustomField>