foundation-objs/main/default/objects/Asset/fields/Collection_Churn__c.field-meta.xml
<CustomField>
    <fullName>Collection_Churn__c</fullName>
    <label>Collection Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>