foundation-objs/main/default/objects/Asset/fields/Completed_business_questionarrie__c.field-meta.xml
<CustomField>
    <fullName>Completed_business_questionarrie__c</fullName>
    <label>Completed business questionarrie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>