foundation-objs/main/default/objects/Asset/fields/Create_License_on_Asset_Creation__c.field-meta.xml
<CustomField>
    <fullName>Create_License_on_Asset_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create License on Asset Creation</label>
    <type>Checkbox</type>
</CustomField>