foundation-objs/main/default/objects/Asset/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Currency_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Type</label>
    <type>Text</type>
</CustomField>