foundation-objs/main/default/objects/Asset/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>Account.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>