foundation-objs/main/default/objects/Asset/fields/Data_Archival__c.field-meta.xml
<CustomField>
    <fullName>Data_Archival__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Archival</label>
    <type>Checkbox</type>
</CustomField>