foundation-objs/main/default/objects/Asset/fields/Date_invoice_will_be_raised__c.field-meta.xml
<CustomField>
    <fullName>Date_invoice_will_be_raised__c</fullName>
    <label>Date invoice will be raised</label>
    <length>255</length>
    <type>Text</type>
</CustomField>