foundation-objs/main/default/objects/Asset/fields/Days_B_w_Finance_App_Date_Intgr_Comp__c.field-meta.xml
<CustomField>
    <fullName>Days_B_w_Finance_App_Date_Intgr_Comp__c</fullName>
    <formula>Integration_Completed_Date__c - Opportunity__r.Finance_Approval_Rejection_Date__c</formula>
    <label>Days (B/w Finance App Date &amp; Intgr Comp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>