foundation-objs/main/default/objects/Asset/fields/Days_B_w_Usage_Start_In_Finance_App__c.field-meta.xml
<CustomField>
    <fullName>Days_B_w_Usage_Start_In_Finance_App__c</fullName>
    <formula>Usage_Start_Date__c - Opportunity__r.Finance_Approval_Rejection_Date__c</formula>
    <label>Days (B/w Usage Start - In Finance App)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>