foundation-objs/main/default/objects/Asset/fields/Days_for_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Days_for_Onboarding__c</fullName>
    <formula>if(isblank(Onboarding_Completed_Date__c),0,if(Onboarding_Completed_Date__c-max_of_opportunity_or_po__c&lt;=30,1,0))</formula>
    <label>Flag for &lt;=30 days onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>