foundation-objs/main/default/objects/Asset/fields/Days_to_Extend__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Extend__c</fullName>
    <label>Number of days license is extended by</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>