foundation-objs/main/default/objects/Asset/fields/Deal_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Closure_Date__c</fullName>
    <label>Deal Closure Date</label>
    <type>Date</type>
</CustomField>