foundation-objs/main/default/objects/Asset/fields/Deal_Total_Amount_C__c.field-meta.xml
<CustomField>
    <fullName>Deal_Total_Amount_C__c</fullName>
    <formula>Opportunity__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Total Amount(C)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>