foundation-objs/main/default/objects/Asset/fields/Digital_Signing_Utility_for_TDS_Certific__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signing_Utility_for_TDS_Certific__c</fullName>
    <label>Digital Signing Utility for TDS Certific</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>