foundation-objs/main/default/objects/Asset/fields/Discount_percentage_from_PY_Asset__c.field-meta.xml
<CustomField>
    <fullName>Discount_percentage_from_PY_Asset__c</fullName>
    <formula>((Price / ( UsageEndDate - PurchaseDate)) / ( Parent.Price / (Parent.UsageEndDate - Parent.PurchaseDate))) - 1</formula>
    <label>Discount % (from PY Asset)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>