foundation-objs/main/default/objects/Asset/fields/Discount_Value_from_PY_Asset__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value_from_PY_Asset__c</fullName>
    <formula>(((Price / ( UsageEndDate - PurchaseDate)) / ( Parent.Price / (Parent.UsageEndDate - Parent.PurchaseDate))) - 1) * Parent.Price</formula>
    <label>Discount Value (from PY Asset)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>