foundation-objs/main/default/objects/Asset/fields/Do_you_feel_comfortable_generating_IRN__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_comfortable_generating_IRN__c</fullName>
    <description>After the demo session, do you feel comfortable generating IRN related activities on Cleartax?
(Please select Yes or No if you have taken E-Invoicing Product, otherwise select &apos;Not Applicable from the below option&apos;)</description>
    <label>Do you feel comfortable generating IRN</label>
    <type>Date</type>
</CustomField>