foundation-objs/main/default/objects/Asset/fields/Do_you_feel_comfortable_handling_Filing__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_comfortable_handling_Filing__c</fullName>
    <description>After the demo session, do you feel comfortable handling the GST filing related activities on Cleartax?
(Please select Yes or No if your product is G-1, G-3, Recon &amp; Report, otherwise select &apos;Not Applicable from the below option&apos;)</description>
    <label>Do you feel comfortable handling Filing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>