foundation-objs/main/default/objects/Asset/fields/Dummy_Actionable__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Actionable__c</fullName>
    <label>Dummy Actionable</label>
    <type>TextArea</type>
</CustomField>