foundation-objs/main/default/objects/Asset/fields/Dynamic_ABCDE__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_ABCDE__c</fullName>
    <formula>if(isblank(CSM_KAM_handover__c),
if(And(PurchaseDate&lt;Date(2021,6,1),Asset_success_flag__c =&apos;Success Pending&apos;),&apos;A&apos;,
if(And(PurchaseDate&gt;=Date(2021,6,1),Asset_success_flag__c =&apos;Success Pending&apos;,(Today() - PurchaseDate)&lt;=90 ),&apos;B&apos;,
if(And(or(Asset_success_flag__c =&apos;Success&apos;,Asset_success_flag__c =&apos;Usage not Tracked&apos;),(Today() - PurchaseDate)&lt;=90),&apos;C&apos;,
if(OR(AND(PurchaseDate&gt;=Date(2021,6,1),(Today() - PurchaseDate)&gt;90),(And(or(Asset_success_flag__c =&apos;Success&apos;,Asset_success_flag__c =&apos;Usage not Tracked&apos;),PurchaseDate&lt;Date(2021,6,1),(Today() - PurchaseDate)&gt;90))),&apos;D&apos;,&apos;E&apos;)))),&apos;E&apos;)</formula>
    <label>Dynamic ABCDE</label>
    <type>Text</type>
</CustomField>