foundation-objs/main/default/objects/Asset/fields/E_Invoice_EWB_Usage_Churn__c.field-meta.xml
<CustomField>
    <fullName>E_Invoice_EWB_Usage_Churn__c</fullName>
    <label>E-Invoice &amp; EWB Usage Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>