foundation-objs/main/default/objects/Asset/fields/ERP_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Type__c</fullName>
    <label>ERP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>