foundation-objs/main/default/objects/Asset/fields/Escalation_Days_Count__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Days_Count__c</fullName>
    <formula>TODAY() - PurchaseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Days Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>