foundation-objs/main/default/objects/Asset/fields/Escalation_Mail_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Mail_Level__c</fullName>
    <label>Escalation Mail Level</label>
    <length>4</length>
    <type>Text</type>
</CustomField>