foundation-objs/main/default/objects/Asset/fields/Existing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Existing_Vendor__c</fullName>
    <label>Existing Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>BDO</fullName>
            </value>
            <value>
                <fullName>Brillo</fullName>
            </value>
            <value>
                <fullName>Computax</fullName>
            </value>
            <value>
                <fullName>Cygnet</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>EY</fullName>
            </value>
            <value>
                <fullName>Farvision</fullName>
            </value>
            <value>
                <fullName>Focus GST</fullName>
            </value>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>Govt Portal</fullName>
            </value>
            <value>
                <fullName>H&amp;R Block</fullName>
            </value>
            <value>
                <fullName>HeroGST</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>In house Software</fullName>
            </value>
            <value>
                <fullName>Iris</fullName>
            </value>
            <value>
                <fullName>Jio GST</fullName>
            </value>
            <value>
                <fullName>Karvy</fullName>
            </value>
            <value>
                <fullName>KPMG</fullName>
            </value>
            <value>
                <fullName>Local CA</fullName>
            </value>
            <value>
                <fullName>Masters GST</fullName>
            </value>
            <value>
                <fullName>Navison</fullName>
            </value>
            <value>
                <fullName>NSDL</fullName>
            </value>
            <value>
                <fullName>Octa GST</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Punjabbulls</fullName>
            </value>
            <value>
                <fullName>PWC</fullName>
            </value>
            <value>
                <fullName>Relyon</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SAP ASP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>