foundation-objs/main/default/objects/Asset/fields/Expected_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Activation_Date__c</fullName>
    <label>Expected Activation Date</label>
    <type>Date</type>
</CustomField>