foundation-objs/main/default/objects/Asset/fields/Expected_Onboarding_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Onboarding_Completion_Date__c</fullName>
    <description>Expected date when onboarding will get completed according to KAM</description>
    <label>Expected Onboarding Completion Date</label>
    <type>Date</type>
</CustomField>