foundation-objs/main/default/objects/Asset/fields/Expected_Onboarding_Completion_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Expected_Onboarding_Completion_Date_c__c</fullName>
    <label>Expected Onboarding Completion Date</label>
    <type>Date</type>
</CustomField>