foundation-objs/main/default/objects/Asset/fields/Expected_Onboarding_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Onboarding_Start_date__c</fullName>
    <description>Date when the onboarding process is expected to start</description>
    <label>Expected Onboarding Start date</label>
    <type>Date</type>
</CustomField>