foundation-objs/main/default/objects/Asset/fields/Export__c.field-meta.xml
<CustomField>
    <fullName>Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export</label>
    <type>Checkbox</type>
</CustomField>