foundation-objs/main/default/objects/Asset/fields/Extended_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Period_End_Date__c</fullName>
    <label>Extended Period End Date</label>
    <type>DateTime</type>
</CustomField>